# bookflower

./: .gitignore  .pdm-python  PROJECT_EVALUATION.md  PROJECT_REQUEST_GUIDE.md  README.md  bookflower_models.dbml  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
bookflower/: asgi.py  settings.py  urls.py  views.py  wsgi.py
books/: admin.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py
chat/: models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_bookreview.py
reading/: admin.py  models.py  urls.py  views.py
reading/migrations/: 0001_initial.py  0002_bookreview.py
reviews/: admin.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
rewards/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
rewards/management/commands/: setup_coupons.py
rewards/migrations/: 0001_initial.py
sunflower/: models.py  urls.py  views.py
sunflower/migrations/: 0001_initial.py
templates/: base.html  dashboard.html
templates/accounts/: login.html  signup.html
templates/base/: base.html
templates/books/: search.html
templates/books/templates/: base.html
templates/chat/: generate_review.html
templates/reading/: complete.html  detail.html  my_books.html  notes.html  session.html  start.html
templates/reviews/: create.html  detail.html  list.html
templates/rewards/: dashboard.html  my_coupons.html  use_coupon.html
templates/sunflower/: home.html
(+5 files in other folders)
