[project]
name = "bookflower"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "heyoni", email = "hhheyoni@gmail.com"},
]
dependencies = ["django>=5.2.6"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
