[project]
name = "bookflower"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "heyoni", email = "hhheyoni@gmail.com"},
]
dependencies = ["django>=5.2.6", "dotenv>=0.9.9", "python-dotenv>=1.1.1", "requests>=2.32.5", "djangorestframework>=3.16.1", "anthropic>=0.68.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
